# olx-repost-python

./: README.md  collect_ads_mysql.py  collect_ads_pg.py  main.py  main_collect_ads.py  main_transfer_to_acc.py  pyproject.toml  requirements.txt  transfer_to_acc_mysql.py  transfer_to_acc_pg.py
config/: __init__.py  project_variables.py
olx_reposter/: __init__.py  errors.py
olx_reposter/config/: __init__.py  project_variables.py
olx_reposter/models/: DBModel.py  MySqlDBModel.py  OlxAdReposter.py  PostgresDBModel.py  SaveAd.py
olx_reposter/utils/: category_converter.py  data_loader.py  image_downloader.py  link_utils.py  network_listener.py  network_listener_for_db.py  options_loader.py
pages/: __init__.py  account_ads_info.py  add_ad.py  login.py
utils/: __init__.py  create_account_ad_json.py  label_shipping.py  network_listen_and_write_data_to_json.py  normal_categories.py  save_images.py  valid_link.py
